<resources>
    <string name="app_name">TimeLine</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>

    <string name="user_name">User name</string>
    <string name="time">2m ago</string>
    <string name="image_upload">image upload</string>
    <string name="icon_image">icon_image</string>
    <string name="_100">100</string>
    <string name="_199">199</string>
    <string name="have_connect">have 4 connect. i can call and tall about with them</string>
    <string name="_1">+1</string>
</resources>