<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_avatar"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp8"
        android:src="@drawable/jacob_pic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTop"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        style="@style/TextStyle10"
        app:layout_constraintBottom_toBottomOf="@+id/imv_avatar"
        app:layout_constraintStart_toStartOf="@+id/guidelineTop"
        app:layout_constraintTop_toTopOf="@+id/imv_avatar" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextStyle11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp27"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        tools:text="@string/time" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        style="@style/TextStyle11"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineTop"
        app:layout_constraintTop_toBottomOf="@+id/imv_avatar" />

    <TextView
        android:id="@+id/tv_number_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_heart"
        android:drawablePadding="@dimen/dp10"
        android:gravity="center"
        android:text="@string/_199"
        style="@style/TextStyle"
        app:layout_constraintStart_toStartOf="@+id/guidelineTop"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <TextView
        android:id="@+id/tv_number_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:drawableStart="@drawable/ic_rounded_rectangle_2"
        android:drawablePadding="@dimen/dp10"
        android:gravity="center"
        android:text="@string/_100"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_number_heart"
        app:layout_constraintStart_toEndOf="@+id/tv_number_heart"
        app:layout_constraintTop_toTopOf="@+id/tv_number_heart" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorBrownish_grey"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_message" />

    <ImageView
        android:id="@+id/line_bottom"
        android:layout_width="@dimen/dp2"
        android:layout_height="@dimen/dp0"
        android:layout_marginTop="@dimen/dp40"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view_line"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_time_line"
        android:layout_width="@dimen/dp15"
        android:layout_height="@dimen/dp15"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/imv_avatar"
        app:layout_constraintEnd_toEndOf="@+id/line_bottom"
        app:layout_constraintStart_toStartOf="@+id/line_bottom"
        app:layout_constraintTop_toTopOf="@+id/imv_avatar" />

    <ImageView
        android:id="@+id/line_top"
        android:layout_width="@dimen/dp2"
        android:layout_height="@dimen/dp30"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginBottom="@dimen/dp4"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/imv_time_line"
        app:layout_constraintEnd_toEndOf="@+id/imv_time_line"
        app:layout_constraintStart_toStartOf="@+id/imv_time_line" />

</androidx.constraintlayout.widget.ConstraintLayout>